# DATATECH

./: .dockerignore  .gitignore  Dockerfile  README.md  architecture.txt  pooo.py  requirements.txt
api/: README.md  database.py  main.py  models.py  query_helpers.py  test_models.py  test_query_helper.py
sdk/: README.md  pyproject.toml  test_sdk.py
sdk/src/filmsapisdk/: __init__.py  film_client.py  film_config.py
sdk/src/filmsapisdk/schemas/: __init__.py  modos.py
